Still working on the dataset

--- a/sample.ipynb
+++ b/sample.ipynb
@@ -150,6 +150,92 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "154e757b-077e-4eed-9305-6e2ad1f35220",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'MinMaxScaler' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m scalers = {\n\u001b[32m      2\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mStandardScaler\u001b[39m\u001b[33m\"\u001b[39m: StandardScaler(),\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mMinMaxScaler\u001b[39m\u001b[33m\"\u001b[39m: \u001b[43mMinMaxScaler\u001b[49m(),\n\u001b[32m      4\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mRobustScaler\u001b[39m\u001b[33m\"\u001b[39m: RobustScaler()\n\u001b[32m      5\u001b[39m }\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# Define features and target\u001b[39;00m\n\u001b[32m      8\u001b[39m features = df1.drop(columns=[\u001b[33m\"\u001b[39m\u001b[33mYear\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mNo_of_iPhone_Sold\u001b[39m\u001b[33m\"\u001b[39m])\n",
+      "\u001b[31mNameError\u001b[39m: name 'MinMaxScaler' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "scalers = {\n",
+    "    \"StandardScaler\": StandardScaler(),\n",
+    "    \"MinMaxScaler\": MinMaxScaler(),\n",
+    "    \"RobustScaler\": RobustScaler()\n",
+    "}\n",
+    "\n",
+    "# Define features and target\n",
+    "features = df1.drop(columns=[\"Year\", \"No_of_iPhone_Sold\"])\n",
+    "target = df1[\"No_of_iPhone_Sold\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd8e3ee9-e708-44a9-b680-b1630a70d765",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35bc3f4e-7502-49f1-a68a-0f7b951ec20b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "44a45cea-77fd-417e-a823-fc0ae94d7787",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      3\u001b[39m plt.figure(figsize=(\u001b[32m8\u001b[39m, \u001b[32m6\u001b[39m))\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m plt.scatter(\u001b[43my_test\u001b[49m, xgb_preds, alpha=\u001b[32m0.7\u001b[39m)\n\u001b[32m      5\u001b[39m plt.plot([\u001b[38;5;28mmin\u001b[39m(y_test), \u001b[38;5;28mmax\u001b[39m(y_test)], [\u001b[38;5;28mmin\u001b[39m(y_test), \u001b[38;5;28mmax\u001b[39m(y_test)], color=\u001b[33m'\u001b[39m\u001b[33mred\u001b[39m\u001b[33m'\u001b[39m, linestyle=\u001b[33m'\u001b[39m\u001b[33m--\u001b[39m\u001b[33m'\u001b[39m, linewidth=\u001b[32m2\u001b[39m)  \u001b[38;5;66;03m# Ideal line\u001b[39;00m\n\u001b[32m      6\u001b[39m plt.title(\u001b[33m'\u001b[39m\u001b[33mXGBoost: Actual vs. Predicted Values\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'y_test' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 800x600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.scatter(y_test, xgb_preds, alpha=0.7)\n",
+    "plt.plot([min(y_test), max(y_test)], [min(y_test), max(y_test)], color='red', linestyle='--', linewidth=2)  # Ideal line\n",
+    "plt.title('XGBoost: Actual vs. Predicted Values')\n",
+    "plt.xlabel('Actual Values')\n",
+    "plt.ylabel('Predicted Values')\n",
+    "plt.grid(True)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c383080f-3e76-49df-8799-12edd86c77e9",
    "metadata": {},
    "outputs": [],
